--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "rollup": "^1.20.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-svelte": "~6.1.1",
     "rollup-plugin-terser": "^5.1.2",
     "svelte": "^3.0.0"
   },
